--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: sixhour
 on:
   schedule:
-    - cron: '25 */8 * * *'
+    - cron: '3 7,15,23 * * *'
 jobs:
   build:
     runs-on: windows-latest
